refactor(core): replace ChronicleMap request cache with a filesystem cache
CachedBot memoized MediaWiki API responses via ChronicleMap, which needs
--add-opens / --add-exports (and -Djna.nosys=true) to run on JDK 17+, and
whose .cache files are large and slow to parse. The image CSV cache
(csv-cache/) had already become the primary cache for scalawiki-wlx.

Cache is now a plain per-key file store: one file per response under
http-cache/<name>/, filename = SHA-256 of the params key, body verbatim
UTF-8, written atomically. CachedBot keeps its API and behaviour
(JSON-only persistence, MwException -> evict -> retry once); the
entries/valueSize sizing params are gone. Per campaign-year subdirs
(http-cache/wlm-ua-2024/, -all/, -2026-wiki/) mirror the old cache-file
names, so cleanup is the same gesture.

- drop net.openhft:chronicle-map and the JPMS javaOptions from build.sbt
- drop -Djna.nosys=true from appveyor.yml
- StatParams/Statistics: reword ChronicleMap mentions
- WlmUaListsSpec: drop jna.nosys, drop entries=
- new CacheFileStoreSpec covering the file store
- .gitignore: http-cache/ (also lands under a module dir in forked tests)

run-stats.sh / run-stats.ps1 / RUNNING.md / CLAUDE.md also updated but
are untracked in this working tree.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MYBFcLPtzckAbZjcVv4GDy